[gd_scene load_steps=25 format=3 uid="uid://bg81boq7epx4p"]

[ext_resource type="Script" path="res://Scripts/enemy1.gd" id="1_va2so"]
[ext_resource type="Texture2D" uid="uid://d8p84p6qcnli" path="res://Sprites/AnimationSheet_Character.png" id="2_4sfjj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fm5fv"]
atlas = ExtResource("2_4sfjj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqisf"]
atlas = ExtResource("2_4sfjj")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdp7m"]
atlas = ExtResource("2_4sfjj")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkppv"]
atlas = ExtResource("2_4sfjj")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3shdn"]
atlas = ExtResource("2_4sfjj")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v38wi"]
atlas = ExtResource("2_4sfjj")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_un5ii"]
atlas = ExtResource("2_4sfjj")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltlmn"]
atlas = ExtResource("2_4sfjj")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdmyd"]
atlas = ExtResource("2_4sfjj")
region = Rect2(224, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v15hg"]
atlas = ExtResource("2_4sfjj")
region = Rect2(224, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wawfl"]
atlas = ExtResource("2_4sfjj")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tvuu"]
atlas = ExtResource("2_4sfjj")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wn6p2"]
atlas = ExtResource("2_4sfjj")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0ua4"]
atlas = ExtResource("2_4sfjj")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1s6wu"]
atlas = ExtResource("2_4sfjj")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2erw6"]
atlas = ExtResource("2_4sfjj")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vuwlk"]
atlas = ExtResource("2_4sfjj")
region = Rect2(0, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_em0as"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fm5fv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqisf")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdp7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkppv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3shdn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v38wi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_un5ii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltlmn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdmyd")
}],
"loop": true,
"name": &"jump",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v15hg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wawfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tvuu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wn6p2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0ua4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1s6wu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2erw6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vuwlk")
}],
"loop": true,
"name": &"moving",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k4t1o"]
size = Vector2(32, 22)

[sub_resource type="Animation" id="Animation_vo3i4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemyanim:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}

[sub_resource type="Animation" id="Animation_pl7ci"]
resource_name = "attack"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 0.7, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"hit"
}, {
"args": [],
"method": &"end_of_hit"
}, {
"args": [],
"method": &"start_walk"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pa3ux"]
_data = {
"RESET": SubResource("Animation_vo3i4"),
"attack": SubResource("Animation_pl7ci")
}

[node name="melee_enem" type="CharacterBody2D"]
position = Vector2(261, 108)
collision_layer = 4
collision_mask = 2
script = ExtResource("1_va2so")

[node name="enemyanim" type="AnimatedSprite2D" parent="."]
position = Vector2(1.5, -0.5)
scale = Vector2(1.59375, 0.71875)
sprite_frames = SubResource("SpriteFrames_em0as")
animation = &"attack"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.00003, 2)
shape = SubResource("RectangleShape2D_k4t1o")

[node name="enemyanimplayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pa3ux")
}

[node name="WallDetector" type="RayCast2D" parent="."]
position = Vector2(-14, 2)
target_position = Vector2(-6, 0)
collision_mask = 2

[node name="GroundDetector" type="RayCast2D" parent="."]
position = Vector2(-19, -11)
target_position = Vector2(-3.05176e-05, 36)
collision_mask = 2

[node name="PlayerDetector" type="RayCast2D" parent="."]
position = Vector2(-19, 2)
target_position = Vector2(-22, 0)

[node name="AttackDetector" type="RayCast2D" parent="."]
position = Vector2(-19, 2)
target_position = Vector2(-16, 0)
